2017-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/gen.c (genRet): fix some problems with returning long long
	* src/SDCCicode.c (geniCodeAdd): fix bug #2625
	* support/regression/tests/bug-2625.c: test for bug #2625

2017-07-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Optimze reads from literal pointer.
	* src/SDCCopt.c:
	  Optimize right shift followed by cast.

2017-07-13 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc,
	  support/regression/tests/bug-2628.c:
	  Fix bug #2628.

2017-07-06 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def,
	  src/stm8/peep.c:
	  Improve accuracy and fix bugs in peephole optimizer.

2017-07-05 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCopt.c,
	  src/SDCCsymt.c:
	  Minor code cleanup, gets rid of a few LLVM warnings.

2017-07-03 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/asstm8/stm8pst.c:
	  Support for break debug instruction, patch by Reto Schneider.

2016-12-12 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c:
	  add cast to left and right subtree only if they both can be casted.
	* support/regression/tests/bug-2611.c:
	  add a new test case.

2017-06-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCgen.c,
	  support/regression/tests/bug-2627.c:
	  Fix bug #2627.
	* src/stm8/gen.c:
	  Enable use of execution count in stm8 register allocation cost calculations.

2017-06-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.h,
	  src/SDCCopt.c:
	  Execution frequency handling infrastructure.

2017-06-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  .version,
	  src/*/ralloc2.cc:
	  Speed up register allocator.

2017-06-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCCbitv.h,
	  src/SDCCbitv.c,
	  src/*/ralloc2.cc:
	  Speed up register allocator a bit.

2017-06-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c: