@@ -1,3 +1,8 @@
+2017-07-15 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCopt.c:
+	  Improve narrowing of multiplications.
+
 2017-07-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/mcs51/gen.c (genRet): fix some problems with returning long long
